030-software/fluxcd/apps/proxmox/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proxmox
  labels:
    bundle.cert-manager.io/inject: enabled
