030-software/fluxcd/apps/proxmox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  annotations:
    configmap.reloader.stakater.com/reload: config
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: caddy
      containers:
        - name: caddy
          image: caddy:2.11.6-alpine
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
          ports:
            - containerPort: 8443
              name: https
          volumeMounts:
            - name: config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
            - mountPath: /etc/ssl/certs
              name: tls
          startupProbe:
            tcpSocket:
              port: https
          livenessProbe:
            tcpSocket:
              port: https
          readinessProbe:
            httpGet:
              path: /
              port: https
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 64Mi
      volumes:
        - name: config
          configMap:
            name: config
        - name: tls
          configMap:
            name: homelab-ca-cm
            defaultMode: 0600
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - mercy
          - weight: 1
            preference:
              matchExpressions:
              - key: topology.kubernetes.io/region
                operator: In
                values:
                - metal
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: caddy
      tolerations:
        - key: "node.kubernetes.io/nuc"
          operator: "Exists"
          effect: "NoSchedule"
