030-software/fluxcd/apps/proxmox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy
spec:
  type: ClusterIP
  selector:
    app: haproxy
  ports:
    - name: https
      port: 443
      targetPort: https
    - name: metrics
      port: 8080
      targetPort: metrics
