030-software/fluxcd/apps/proxmox/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxmox
  annotations:
    dashboard.${domain}/icon: monitor-account
    dashboard.${domain}/name: proxmox
    dashboard.${domain}/url: https://proxmox.${domain}
spec:
  hostnames:
    - proxmox.${domain}
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: caddy
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
